find missing elements